--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -1,26 +1,58 @@
-.Join-logo {
+.SignIn-logo {
     float: left;
 }
 
-.Join-headline {
+.SignIn-Headline {
     float: center;
     font-size: medium;
 }
 
-.Join-table {}
+.SignIn-table-Th1 {
+    width: 335px;
+    background-color: rgba(217, 217, 217, 0.8);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.24);
+}
 
-.Join-table-input {
-    background-color: white;
-    border: 1px solid black;
+#lastLine {
+    border-bottom: none;
+}
+
+.SignIn-table-input {
+    background-color: rgba(217, 217, 217, 0.21);
+    border: 1px solid #000000;
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    position: absolute;
+    width: 806px;
+    height: 56px;
+    left: 470px;
 
 }
 
-.Join-table-button {
+.SignIn-table-input-withButton {
+    width: 615px;
+}
+
+.SignIn-table-Th1-p {
+    font-size: 24px;
+    left: 470px;
+}
+
+.SignIn-table-button {
     background-color: green;
     color: white;
-
+    position: absolute;
+    width: 171px;
+    height: 343px;
+    left: 1100px;
 }
 
 #black_button {
     background-color: black;
+    position: absolute;
+    width: 337.97px;
+    height: 81px;
+    left: 551px;
+    top: 877px;
+    font-size: 30px;
 }
