페이지 링크
Homepage / ReviewAll 링크되어있습니다.

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -13,7 +13,8 @@ a{
 
 header{
     padding: 20px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
+    min-width: 1400px; 
 }
 
 .signInUp a{
