페이지 연결(홈)
홈화면에서 페이지 연결

--- a/src/css/CreateStore.css
+++ b/src/css/CreateStore.css
@@ -1,4 +1,4 @@
-header {
+/* header {
   padding: 50px;
   text-align: center;
   background: rgb(238, 238, 238);
@@ -10,7 +10,7 @@ color:white;
 height: 60px;
 line-height: 60px;
 text-align: center;
-}
+} */
 
 body{
 background-color: rgb(238, 238, 238);
