--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -22,11 +22,17 @@ header{
     margin-left: 30px;
 }
 
+#homelogo {
+    width: 50px;
+    height: 50px;
+}
+
 nav {
     justify-content: center;
     color: white;
     background-color: var(--ewhagreen);
     padding: 10px;
+    min-width: 1400px; 
 }
 
 nav .pageName{
@@ -40,10 +46,5 @@ nav a {
     border-right: 1px solid white;
     font-size: 15px;
     float: right;
-    margin-top:10px;
-}
-
-#homelogo {
-    width: 50px;
-    height: 50px;
+    /* margin-top:10px; */
 }
