--- a/src/css/ReviewAll.module.css
+++ b/src/css/ReviewAll.module.css
@@ -7,9 +7,14 @@ body {
     height: 100%;
     margin: 0px;
     background-color: #e9e9e9;
+
 }
 
-section {
+/* div {
+    display:inline-flex;
+} */
+
+.reviewsection {
     display: flex;
     justify-content: center;
 }
