--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -12,20 +12,54 @@ a{
 }
 
 header{
+    display: flex;
     padding: 20px;
     /* margin-bottom: 30px; */
     min-width: 1400px; 
+    justify-content: space-between
+}
+
+.signInUp {
+    display: flex;
+    float: right; 
+    top: 25px;
+    align-items: center
 }
 
 .signInUp a{
-    float: right;
     margin-left: 30px;
+    position: relative;
 }
 
+.signInUp a:hover {
+    color: #01c9ca;  
+  }
+  
+.signInUp a:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #000;
+    transform: scale(0);
+    transition: all 0.2s;
+  }
+  
+ .signInUp a:hover:before {
+    background: #01c9ca;
+    transform: scale(1);
+  }
+
 #homelogo {
+    display: flex;
     width: 50px;
     height: 50px;
 }
+
+/* 네비게이션 바 */
 
 nav {
     justify-content: center;
@@ -43,7 +77,7 @@ nav .pageName{
 nav a {
     padding-left: 20px;
     padding-right: 20px;
-    border-right: 1px solid white;
+    /* border-right: 1px solid white; */
     font-size: 15px;
     float: right;
     /* margin-top:10px; */
