--- a/src/css/HomePage.module.css
+++ b/src/css/HomePage.module.css
@@ -24,27 +24,8 @@ body {
     font-family: 'Noto Sans KR';
     font-size:17px;
     line-height:1.5;
-}
-  
-* {
-    box-sizing: border-box;
-  }
-
-/* header {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-    background: rgb(238, 238, 238);
     min-width: 1400px; 
-} */
-
-/* Nav {
-    background-color: var(--egreen);
-    color: white;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-} */
+}
 
 .section {
     text-align: center;
@@ -58,7 +39,7 @@ body {
 }
 
 .hottitle {
-    /* display: inline-block; */
+    display: inline-block;
     font-size: 18px;
     color: rgb(255, 255, 255);
     margin-top: 20px;
@@ -105,7 +86,7 @@ p {
 .link-1 a:after { right: 0; }
 
 .link-1 a:hover:before, .link-1 a:hover:after {
-  width: 50%;
+  width: 52%;
 }
 
 .link-1 a:before, .link-1 a:after {
