--- a/src/css/CreateReview.module.css
+++ b/src/css/CreateReview.module.css
@@ -1,91 +1,103 @@
 header {
-    padding: 50px;
-    text-align: center;
-    background: rgb(238, 238, 238);
+  padding: 50px;
+  text-align: center;
+  background: rgb(238, 238, 238);
 }
 
 body{
-  background-color: #dcdcdc;
+background-color: #dcdcdc;
 }
 nav {
-    background-color: #214832;
-    color:white;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
+  background-color: #214832;
+  color:white;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
 }
 
 aside{
-  width:200px;
-  height:250px;
-  background-color:white;
-  border:20px  solid #dcdcdc;
-  padding:30px ;
-  float:left;
+width:200px;
+height:250px;
+background-color:white;
+border:20px  solid #dcdcdc;
+padding:30px ;
+float:left;
 }
 
-table{
-  width: 1000px;
-  background-color:white;
+#table {
+display:table;
+width:900px;
 }
-th{
-  text-align:left;
-  border-bottom: 1px solid #dcdcdc;
-  padding: 10px;
+.cell {display: table-cell; padding: 3px; border-bottom: 1px solid #DDD;}
+
+.row{
+position: relative;
+background-color:white;
+left:80px;
+top :20px;
+border: solid #dcdcdc 0.5px;
 }
 
-td{
-  border-bottom: 1px solid #dcdcdc;
-  padding: 10px;
+.col1{
+position:relative;
+top:15px;
+width:160px;
+height:50px;
+}
+
+.col2{
+position:relative;
+top:15px;
+height:50px;
 }
 
 .box{
-    border:10px  solid #dcdcdc;
+  border:10px  solid #dcdcdc;
 }
 .adding {
-  float:left;
-  font-weight:bold;
-  font-size:25px;
-  margin-left:35px;
-  margin-right :750px;
+float:left;
+font-weight:bold;
+font-size:25px;
+margin-left:35px;
+margin-right :750px;
 }
 .one {
-  float:left;
-  font-size:14px;
-  margin-right:40px;
+float:left;
+font-size:14px;
+margin-right:40px;
 }
 
 .two {
-  float:left;
-  font-size:14px;
-  margin-right:40px;
+float:left;
+font-size:14px;
+margin-right:40px;
 }
 
 .three {
-  float:left;
-  font-size:14px;
+float:left;
+font-size:14px;
 }
 
 .time1{
-  width:100px;
-  height:100px;
+width:100px;
+height:100px;
 }
 
 .up{
-  color:#214832;
-  line-height:30px;
-  font-weight:600;
-  font-size:25px;
-  text-align:center;
+color:#214832;
+line-height:30px;
+font-weight:600;
+font-size:25px;
+text-align:center;
 
 }
 .down{
-  border:3px solid #adb5bd;
-  margin:auto;
-  height:200px;
-  background-color: #adb5bd;
-  position: absolute;
-  width:165px;
-  left:75px;
-  top:260px;
+border:3px solid #adb5bd;
+margin:auto;
+height:200px;
+background-color: #adb5bd;
+position: absolute;
+width:165px;
+left:75px;
+top:260px;
 }
