--- a/flask-server/templates/result.html
+++ b/flask-server/templates/result.html
@@ -1,12 +1,5 @@
 <html>
     <body>
-        <table border = 1>
-        {% for key, value in result.items() %}
-        <tr>
-            <th>{{ key }}</th>
-            <td>{{ value }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+        <p>The Restaurant name is {{result.name}} and address is {{result.location}}.</p>
     </body>
 </html>
