--- a/flask-server/templates/result.html
+++ b/flask-server/templates/result.html
@@ -1,5 +1,15 @@
 <html>
     <body>
-        <p>The Restaurant name is {{result.name}} and address is {{result.location}}.</p>
+        <h2>맛집 정보 example</h2>
+        <p> 가게명 : {{result.storename}}<br/>
+            주소 : {{result.location}} <br/>
+            전화번호 : {{result.phonenumber}} <br/>
+            영업시간 : {{result.time1}} ~ {{result.time2}} <br/>
+            카테고리 : {{result.food}} <br/>
+            주차장 : {{result.park}} <br/>
+            가격대 : {{result.price1}} ~ {{result.price2}} <br/>
+            사이트 : {{result.site}} <br/>
+        </p>
+        </p>
     </body>
 </html>
