--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -16,7 +16,9 @@ header{
     /* padding: 20px; */
     /* margin-bottom: 30px; */
     min-width: 1400px; 
-    justify-content: space-between
+    justify-content: space-between;
+    margin-bottom:15px;
+    margin-top:15px
 }
 
 .signInUp {
@@ -64,25 +66,28 @@ header{
 nav {
     justify-content: center;
     color: white;
-    background-color: var(--ewhagreen);
-    height: 20px;
+    /* background-color: var(--ewhagreen); */
+    background-color: rgb(77, 107, 91);
+    height: 62.5px;
     min-width: 1400px; 
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 nav .pageName{
     font: 25px bolder;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+    
 }
 
 nav a {
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
     /* border-right: 1px solid white; */
     font-size: 15px;
     float: right;
     /* margin-top:10px; */
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 150px;
 }
 
 nav a:hover {
