--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -1,8 +1,8 @@
-.Header {
+/* .Header {
     float: center;
-}
+} */
 
-p .Headline {
+.Headline {
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 600;
