--- a/src/css/CreateMenu.module.css
+++ b/src/css/CreateMenu.module.css
@@ -1,98 +1,117 @@
-header {
-  padding: 50px;
-  text-align: center;
-  background: rgb(238, 238, 238);
+/* body{
+  background-color: rgb(238, 238, 238);
+  } */
+
+section {
+  display: flex;
+  justify-content: center;
+  min-width: 1400px;
 }
 
-body{
-background-color: #dcdcdc;
-}
-nav {
-  background-color: #214832;
-  color:white;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
+.aside {
+  /* width:200px; */
+  height: 400px;
+  /* background-color: rgb(238, 238, 238); */
+  padding: 20px;
+  float: left;
 }
 
-aside{
-width:200px;
-height:70px;
-background-color:white;
-border:20px  solid #dcdcdc;
-padding:30px ;
-float:left;
+.asideleft {
+  position: relative;
+  background-color: white;
+  /* border: solid #dcdcdc 2px; */
+  width: 230px;
+  height: 150px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+
+  /* left:30px; */
 }
 
-
-table{
-width: 500px;
-background-color:white;
-}
-th{
-text-align:left;
-border-bottom: 1px solid #dcdcdc;
-padding: 10px;
+.up {
+  position: absolute;
+  top: 30px;
+  right: 22px;
 }
 
-td{
-border-bottom: 1px solid #dcdcdc;
-padding: 10px;
-text-align:left;
+.down {
+  position: absolute;
+  bottom: 30px;
+  right: 22px;
 }
 
 #table {
-display:table;
-width:900px;
-}
-.cell {display: table-cell; padding: 3px; border-bottom: 1px solid #DDD;}
+  display: table;
+  width: 900px;
+  margin-top: 20px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
 
-.row{
-position: relative;
-background-color:white;
-left:80px;
-top :20px;
-border: solid #dcdcdc 0.5px;
 }
 
-.col1{
-position:relative;
-top:15px;
-width:160px;
-height:50px;
+.cell {
+  display: table-cell;
+  padding: 3px;
+  border-bottom: 1px solid #DDD;
+  text-align: left;
+  font-weight: 600;
+  font-size: 16px;
+
 }
 
-.col2{
-position:relative;
-top:15px;
-height:50px;
+.row {
+  position: relative;
+  background-color: white;
+  /* left:80px; */
+  /* top :20px; */
+  border: solid #dcdcdc 0.5px;
 }
 
-
-.box{
-  border:10px  solid #dcdcdc;
+.col1 {
+  position: relative;
+  top: 10px;
+  left: 40px;
+  width: 150px;
+  height: 50px;
 }
+
+.col2 {
+  position: relative;
+  top: 8px;
+  height: 50px;
+}
+
+.box {
+  border: 10px solid #dcdcdc;
+}
+
 .adding {
-float:left;
-font-weight:bold;
-font-size:25px;
-margin-left:35px;
-margin-right :750px;
+  float: left;
+  font-weight: bold;
+  font-size: 25px;
+  margin-left: 35px;
+  margin-right: 750px;
 }
 
 
-.up{
-color:#adb5bd;
-line-height:30px;
-font-weight:600;
-font-size:25px;
-text-align:right;
+.up {
+
+  color: #adb5bd;
+  line-height: 30px;
+  font-weight: 600;
+  font-size: 25px;
+  text-align: right;
 
 }
-.down{
-color:#214832;
-line-height:50px;
-font-weight:600;
-font-size:25px;
-text-align:right;
+
+.up:hover {
+  color: rgb(116, 139, 107);
+}
+
+.down {
+  color: #214832;
+  line-height: 50px;
+  font-weight: 600;
+  font-size: 25px;
+  text-align: right;
 }
