--- a/src/css/CreateReview.module.css
+++ b/src/css/CreateReview.module.css
@@ -1,103 +1,99 @@
-header {
-  padding: 50px;
-  text-align: center;
-  background: rgb(238, 238, 238);
-}
-
-body{
+/* body{
 background-color: #dcdcdc;
-}
-nav {
-  background-color: #214832;
-  color:white;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-}
+} */
 
-aside{
-width:200px;
-height:250px;
-background-color:white;
-border:20px  solid #dcdcdc;
-padding:30px ;
-float:left;
+
+.aside {
+  width: 200px;
+  height: 250px;
+  background-color: white;
+  border: 20px solid #dcdcdc;
+  padding: 30px;
+  float: left;
 }
 
 #table {
-display:table;
-width:900px;
-}
-.cell {display: table-cell; padding: 3px; border-bottom: 1px solid #DDD;}
-
-.row{
-position: relative;
-background-color:white;
-left:80px;
-top :20px;
-border: solid #dcdcdc 0.5px;
+  display: table;
+  width: 900px;
 }
 
-.col1{
-position:relative;
-top:15px;
-width:160px;
-height:50px;
+.cell {
+  display: table-cell;
+  padding: 3px;
+  border-bottom: 1px solid #DDD;
 }
 
-.col2{
-position:relative;
-top:15px;
-height:50px;
+.row {
+  position: relative;
+  background-color: white;
+  left: 80px;
+  top: 20px;
+  border: solid #dcdcdc 0.5px;
 }
 
-.box{
-  border:10px  solid #dcdcdc;
+.col1 {
+  position: relative;
+  top: 15px;
+  width: 160px;
+  height: 50px;
 }
+
+.col2 {
+  position: relative;
+  top: 15px;
+  height: 50px;
+}
+
+.box {
+  border: 10px solid #dcdcdc;
+}
+
 .adding {
-float:left;
-font-weight:bold;
-font-size:25px;
-margin-left:35px;
-margin-right :750px;
+  float: left;
+  font-weight: bold;
+  font-size: 25px;
+  margin-left: 35px;
+  margin-right: 750px;
 }
+
 .one {
-float:left;
-font-size:14px;
-margin-right:40px;
+  float: left;
+  font-size: 14px;
+  margin-right: 40px;
 }
 
 .two {
-float:left;
-font-size:14px;
-margin-right:40px;
+  float: left;
+  font-size: 14px;
+  margin-right: 40px;
 }
 
 .three {
-float:left;
-font-size:14px;
+  float: left;
+  font-size: 14px;
 }
 
-.time1{
-width:100px;
-height:100px;
+.time1 {
+  width: 100px;
+  height: 100px;
 }
 
-.up{
-color:#214832;
-line-height:30px;
-font-weight:600;
-font-size:25px;
-text-align:center;
+.up {
+  color: #214832;
+  line-height: 30px;
+  font-weight: 600;
+  font-size: 25px;
+  text-align: center;
 
 }
-.down{
-border:3px solid #adb5bd;
-margin:auto;
-height:200px;
-background-color: #adb5bd;
-position: absolute;
-width:165px;
-left:75px;
-top:260px;
+
+.down {
+  border: 3px solid #adb5bd;
+  margin: auto;
+  height: 200px;
+  background-color: #adb5bd;
+  position: absolute;
+  width: 165px;
+  left: 75px;
+  top: 260px;
 }
