--- a/src/css/CreateStore.module.css
+++ b/src/css/CreateStore.module.css
@@ -1,112 +1,118 @@
-body{
+/* body{
   background-color: rgb(238, 238, 238);
-  }
-  
-  section{
-    display: flex;
-    justify-content: center;
-    min-width: 1400px; 
-  }
-  
-  .aside{
+  } */
+
+section {
+  display: flex;
+  justify-content: center;
+  min-width: 1400px;
+}
+
+.aside {
   /* width:200px; */
-  height:400px;
+  height: 400px;
   /* background-color: rgb(238, 238, 238); */
-  padding:20px ;
-  float:left;
-  }
-  
-  .asideleft{
-  position:relative;
+  padding: 20px;
+  float: left;
+}
+
+.asideleft {
+  position: relative;
   background-color: white;
   /* border: solid #dcdcdc 2px; */
-  width:230px;
-  height:150px;
+  width: 230px;
+  height: 150px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
-  
+
   /* left:30px; */
-  }
-  
-  .up{
-  position:absolute;
-  top:30px;
-  right:22px;
-  }
-  
-  .down{
-  position:absolute;
-  bottom:30px;
-  right:22px;
-  }
-  
-  #table {
-  display:table;
-  width:900px;
+}
+
+.up {
+  position: absolute;
+  top: 30px;
+  right: 22px;
+}
+
+.down {
+  position: absolute;
+  bottom: 30px;
+  right: 22px;
+}
+
+#table {
+  display: table;
+  width: 900px;
   margin-top: 20px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
-  }
-  
-  .cell {
-    display: table-cell;
-    padding: 3px;
-    border-bottom: 1px solid #DDD;
-    text-align: left;
-    font-weight:600;
-    font-size:16px;
-  
-  }
-  
-  .row{
+  vertical-align: middle;
+}
+
+.cell {
+  display: table-cell;
+  padding: 3px;
+  /* border-bottom: 1px solid #DDD; */
+  text-align: left;
+  font-weight: 600;
+  font-size: 16px;
+
+}
+
+.row {
   position: relative;
-  background-color:white;
+  background-color: white;
   /* left:80px; */
   /* top :20px; */
   border: solid #dcdcdc 0.5px;
-  }
-  
-  .col1{
-  position:relative;
-  top:10px;
-  left: 40px;
-  width:150px;
-  height:50px;
-  }
-  
-  .col2{
-  position:relative;
-    top:8px;
-  height:50px;
-  }
-  
-  .box{
-    border:10px  solid #dcdcdc;
-  }
-  .adding {
-  float:left;
-  font-weight:bold;
-  font-size:25px;
-  margin-left:35px;
-  margin-right :750px;
-  }
-  
-  
-  .up{
-  color:#214832;
-  line-height:30px;
-  font-weight:600;
-  font-size:25px;
-  text-align:right;
-  
-  }
-  
-  .down{
-  color:#adb5bd;
-  line-height:50px;
-  font-weight:600;
-  font-size:25px;
-  text-align:right;
-  }
+}
 
-  
+.col1 {
+  position: relative;
+  /* top:10px; */
+  left: 40px;
+  width: 150px;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.col2 {
+  position: relative;
+  /* top:8px; */
+  height: 50px;
+  vertical-align: middle;
+}
+
+.box {
+  border: 10px solid #dcdcdc;
+}
+
+.adding {
+  float: left;
+  font-weight: bold;
+  font-size: 25px;
+  margin-left: 35px;
+  margin-right: 750px;
+}
+
+
+.up {
+  color: #214832;
+  line-height: 30px;
+  font-weight: 600;
+  font-size: 25px;
+  text-align: right;
+
+}
+
+.down {
+  color: #adb5bd;
+  line-height: 50px;
+  font-weight: 600;
+  font-size: 25px;
+  text-align: right;
+}
+
+.down:hover {
+  color: rgb(116, 139, 107);
+}
