--- a/src/css/MyPageBookmark.module.css
+++ b/src/css/MyPageBookmark.module.css
@@ -1,142 +1,147 @@
-
 /* * {
     box-sizing: border-box;
   } */
-  
-  body {
+
+/* body {
             margin : 0;
           }
-  
-  .mainbar {
-    background-color:#00462A;
-    color: white;
-    padding : 15px;
-    font-size: x-large;
-    top:269px;
-    width:100%;
-  
-  }
-  
-  .background {
-    background-color:#F0F0F3;
-    padding-top: 2%;
-    flex : center;
-    text-align: center;
-    height : 623px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: auto;
-    width : 960px;
-  }
-  
-  ul li {
-    border: 1px solid #ddd;
-    margin-top: -1px; /* Prevent double borders */
-    background-color: #f6f6f6;
-    padding: 12px;
-  }
-  
-  .resultbar {
-    overflow: hidden;
-    background-color: #FFFFFF;
-    font-family: Arial, Helvetica, sans-serif;
-    width : 960px;
-    margin : auto;
-  }
-  
-  .resultbar a {
-    float: left;
-    font-size: 16px;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .dropdown {
-    float: right;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .resultbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: red;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .show {
-    display: block;
-  }
-  
-  /* button style*/
-  
-  button.black {
-      background-color: #222228;
-      color: white;
-      text-align: center;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-      padding : 5px 20px;
-      
-  }
-  
-  button.green {
-      background-color: #00462A;
-      color: white;
-      border : none;
-      cursor: pointer;
-      padding : 5px 10px;
-  }
-  
-  button:hover {
-      opacity: 0.8;
-  }
-  /*Avatar*/
-  .avatar {
-      vertical-align: middle;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-  }
-  #cl {
-    background-color:#00462A;
-  }
-  #cr{
-    background-color:#F6F6F6;
-  }
+   */
+.mainbar {
+  background-color: #00462A;
+  color: white;
+  padding: 15px;
+  font-size: x-large;
+  top: 269px;
+  width: 100%;
+
+}
+
+.background {
+  background-color: #F0F0F3;
+  padding-top: 2%;
+  flex: center;
+  text-align: center;
+  height: 623px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: auto;
+  width: 960px;
+}
+
+ul li {
+  border: 1px solid #ddd;
+  margin-top: -1px;
+  /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+}
+
+.resultbar {
+  overflow: hidden;
+  background-color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 960px;
+  margin: auto;
+}
+
+.resultbar a {
+  float: left;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.resultbar a:hover,
+.dropdown:hover .dropbtn,
+.dropbtn:focus {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
+
+/* button style*/
+
+button.black {
+  background-color: #222228;
+  color: white;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 20px;
+
+}
+
+button.green {
+  background-color: #00462A;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/*Avatar*/
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+#cl {
+  background-color: #00462A;
+}
+
+#cr {
+  background-color: #F6F6F6;
+}
