--- a/src/css/ReviewAll.module.css
+++ b/src/css/ReviewAll.module.css
@@ -1,14 +1,14 @@
 :root {
-    --egreen : #00462A;
+    --egreen: #00462A;
 }
 
-body {
+/* body {
     width: 100%;
     height: 100%;
     margin: 0px;
     background-color: #e9e9e9;
 
-}
+} */
 
 /* div {
     display:inline-flex;
@@ -23,22 +23,22 @@ body {
     margin-top: 60px;
 }
 
-.title1{
+.title1 {
     display: flex;
     margin-bottom: 15px;
     font-size: 20px;
 }
 
-.pr_description{
-position: relative;
-width: 700px;
-height: 260px;
-background: #FFFFFF;
-border: 1px solid #D9D9D9;
-border-radius: 0px;
+.pr_description {
+    position: relative;
+    width: 700px;
+    height: 260px;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    border-radius: 0px;
 }
 
-.user_name{
+.user_name {
     position: absolute;
     top: 38px;
     left: 50px;
@@ -79,23 +79,23 @@ border-radius: 0px;
     right: 12px;
 }
 
-.title2{
+.title2 {
     display: flex;
     margin-bottom: 15px;
     font-size: 20px;
 }
 
-.hotreview{
+.hotreview {
     margin-top: 60px;
     margin-left: 40px;
     width: 200px;
 }
 
-.hot_description{
+.hot_description {
     margin: 0px;
     width: 250px;
     height: 500px;
-    
+
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
     border-radius: 0px;
