--- a/src/css/StoreListView.module.css
+++ b/src/css/StoreListView.module.css
@@ -1,37 +1,71 @@
-.StoreListView-Restaurant-table {
+.all {
+    display: flex;
+    margin-top: 20px;
+    height: 685px;
+}
+
+
+.StoreList {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+
+.TopBar {
+    display: flex;
     background-color: white;
-    float: left;
-    width: 50%;
-    height: 123.06px;
-    border: 1px solid black;
-    color: black;
+    width: 100%;
+    border-top: 1px solid #C6C6C6;
+    border-right: 1px solid #C6C6C6;
+    border-left: 1px solid #C6C6C6;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    justify-content: space-between
 }
 
-.StoreListView-Restaurant-table-ImagePart {
-    float: left;
-    width: 25%;
-    margin: 0;
+.Result {
+    margin-left: 15px;
 }
 
-.StoreListView-Restaurant-Tag {
-    float: right;
-    display: inline;
-    width: 63px;
-    height: 12px;
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
+.dropdown {
+    margin-right: 15px;
 }
 
-.StoreListView-Restaurant-img {
-    width: 345.45px;
-    height: 123.06px;
-    left: 83px;
+.Dropdown1 {
+    margin-right: 15px;
 }
 
-.StoreListView-Restaurant-StoreName {
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 18px;
+.Dropdown2 {}
+
+
+.Restaurant {
+    /* display: flex; */
+    border: 1px solid rgb(191, 191, 191);
+    width: 630px;
+    /* height: 120px; */
+    background-color: rgb(255, 255, 255);
+    /* box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25); */
+    border-radius: 3px;
+    overflow: auto;
+}
+
+.rightbox {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    height: 100%;
+}
+
+.storemap {
+    width: 630px;
+    height: 50%;
+    background-color: rgb(107, 107, 107);
+}
+
+.storelistdetail {
+    width: 630px;
+    background-color: rgb(255, 255, 255);
+    height: 50%;
 }
