Submit_store로 수정, table명 대문자로 변경, print문 주석처리

--- a/flask-server/templates/result_menu.html
+++ b/flask-server/templates/result_menu.html
@@ -4,6 +4,7 @@
         <p> 메뉴명: {{result.food}} <br/>
             가격: {{result.money}} <br/>
             영양성분: {{result.nutrient}} <br/>
+            이미지 : {{img_path}} <br/>
         </p>
     </body>
 </html>
