--- a/flask-server/templates/result.html
+++ b/flask-server/templates/result.html
@@ -9,7 +9,7 @@
             주차장 : {{result.park}} <br/>
             가격대 : {{result.price1}} ~ {{result.price2}} <br/>
             사이트 : {{result.site}} <br/>
-            이미지 : {{img_path}} <br/>
+            이미지 : <img src={{result.img_path}}/> <br/>
         </p>
     </body>
 </html>
