result.html img src 태그 추가, DB 연결 모두 확인

--- a/flask-server/templates/result.html
+++ b/flask-server/templates/result.html
@@ -1,3 +1,5 @@
+
+
 <html>
     <body>
         <h2>맛집 정보 example</h2>
@@ -9,7 +11,7 @@
             주차장 : {{result.park}} <br/>
             가격대 : {{result.price1}} ~ {{result.price2}} <br/>
             사이트 : {{result.site}} <br/>
-            이미지 : <img src={{result.img_path}}/> <br/>
+            이미지 : <img src="{{img_path}}" alt="Store Image"/> <br/>
         </p>
     </body>
 </html>
