--- a/flask-server/templates/result_review.html
+++ b/flask-server/templates/result_review.html
@@ -4,6 +4,7 @@
         <p> 작성자 : {{result.username}} <br/>
             제목: {{result.reviewtitle}} <br/>
             내용: {{result.reviewdesc}} <br/>
+            이미지 : <img src="{{img_path}}" alt="Review Image"/> <br/>
         </p>
     </body>
 </html>
