--- a/flask-server/templates/result_menu.html
+++ b/flask-server/templates/result_menu.html
@@ -4,7 +4,7 @@
         <p> 메뉴명: {{result.food}} <br/>
             가격: {{result.money}} <br/>
             영양성분: {{result.nutrient}} <br/>
-            이미지 : {{img_path}} <br/>
+            이미지 : <img src="{{img_path}}" alt="Menu Image"/><br/>
         </p>
     </body>
 </html>
