--- a/src/css/MenuPost.module.css
+++ b/src/css/MenuPost.module.css
@@ -1,64 +1,44 @@
 .listbox {
     display: flex;
-    height: 130px;
+    height: 180px;
     border: 1px solid rgb(225, 225, 225);
     justify-content: left;
     background-color: rgb(255, 255, 255);
     align-items: center;
 }
 
+.listdesc{
+    text-align: left;
+    margin-left: 30px;
+    font-weight: 600;
+    color:dimgray;
+}
+
 .ImagePart {
     display: flex;
-    width: 300px;
-    height: 130px;
+    width: 240px;
     align-items: center;
-    margin-left: 2px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.listdesc {
-    margin-left: 25px;
-}
-
-.MenuName {
-    top: 30px;
-    font-size: 18px;
+#MenuName {
+    font-size: 20px;
     font-weight: 600;
-
-}
-
-.storelocation {
-    position: relative;
-    top: 35px;
-
-}
-
-.Tag {
-    position: relative;
-    bottom: -13px;
-    font-size: 13px;
-    font-weight: 800;
+    color: black;
+    margin-bottom: 7px;
 }
 
 .heart {
     position: relative;
-    top: 15px;
+    font-size: 15px;
+    font-weight: 800;
+    color:black;
+    margin-bottom: 5px;
 }
 
 .heartimg {
     position: relative;
 }
 
-.heartnum {
-    position: relative;
-    font-size: 13px;
-    font-weight: 800;
-    left: 24px;
-}
-
-.reviewnum {
-    position: relative;
-    font-size: 13px;
-    font-weight: 800;
-    right: 50px;
-    top: -27px;
-}
