--- a/src/css/ReviewAll.module.css
+++ b/src/css/ReviewAll.module.css
@@ -15,11 +15,13 @@
 } */
 
 .reviewsection {
+    width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .presentreview {
+    width: 50%;
     margin-top: 60px;
 }
 
@@ -30,8 +32,9 @@
 }
 
 .pr_description {
+    display: flex;
     position: relative;
-    width: 700px;
+
     height: 260px;
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
@@ -40,35 +43,30 @@
 
 .user_name {
     position: absolute;
-    top: 38px;
+    top: 30px;
     left: 50px;
 }
 
 .store_name {
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 50px;
+    
     font-size: 20px;
-
-}
-
-.store_location {
-    position: absolute;
-    top: 110px;
-    left: 50px;
-    color: rgb(148, 148, 148);
-    font-size: 10px;
+    font-weight: 600;
 }
 
 .review_title {
     position: absolute;
-    top: 150px;
+    top: 120px;
     left: 50px;
+    font-size: 18px;
 }
 
 .review_desc {
+    text-align: left;
     position: absolute;
-    top: 180px;
+    top: 160px;
     left: 50px;
     width: 200px;
 }
