--- a/flask-server/templates/StoreListView.html
+++ b/flask-server/templates/StoreListView.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<script src="../../src/pages/StoreListView.js"></script>
+<head>
+    <script src="../../src/pages/StoreListView.js"></script>
+</head>
+
+<body>
+    <div id="STORELISTVIEW">
+
+    </div>
+</body>
 
 </html>
