--- a/flask-server/templates/list.html
+++ b/flask-server/templates/list.html
@@ -2,6 +2,6 @@
     <body>
         {%if total > 0 %}
     <p> 맛집 리스트 == 현재까지 {{total}}개 등록됨</p>
-        {% endif &}
+        {% endif %}
 </body>
 </html>
