--- a/flask-server/static/css/Header.css
+++ b/flask-server/static/css/Header.css
@@ -102,7 +102,7 @@ nav .pageName {
 
 }
 
-nav a {
+nav link {
     /* padding-left: 20px;
     padding-right: 20px; */
     /* border-right: 1px solid white; */
