--- a/flask-server/templates/StoreDetail.html
+++ b/flask-server/templates/StoreDetail.html
@@ -16,7 +16,7 @@
             </nav>
             <div class="outer">
                 <div class="pane">
-                    <div id="paneName">
+                    <div id="pane">
                         음식점 정보
                     </div>
                     <div>
@@ -25,7 +25,7 @@
             
                     <div class=info>
                         <div>
-                            <div class="StoreName">맛집 이름</div>
+                            <div class="Store">맛집 이름</div>
                             <div class="storelocation">
                                 <img src="samplelocation" class="locationimg" width="24" height="24" />
                                 "주소"
@@ -54,7 +54,7 @@
              <div class = "menu">
                 <div class="outer">
                     <div class="pane">
-                        <div id="paneName">
+                        <div id="pane">
                             메뉴 목록
                         </div>
                         <div class="editPane">
@@ -62,7 +62,18 @@
                             <Link to="/CreateMenu"><button class="button">메뉴 정보 수정</button></Link>
                         </div>
                         <div class="menuPane">
-                            <MenuPost/>
+                            <div class="listbox">
+                                <div class="ImagePart">
+                                    <img src="sample" width="295" height="125" />
+                                </div>
+                               
+                                <div class="listdesc">
+                                    <div id="Menu">메뉴 이름</div>
+                                    <div class="heart"><img src="heart" class="heartimg" width="14" height="16" /> 150</div>
+                                    <div class="price">가격</div>
+                                    <div class="nutrients">영양성분</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -71,7 +82,7 @@
             <div class = "review">
                 <div class= "outer">
                     <div class= "pane">
-                        <div id= "paneName">
+                        <div id= "pane">
                             리뷰&#40; /*total*/ 건&#41;
                         </div>
                         <div class= "editPane">
@@ -79,7 +90,28 @@
                             <Link to="/CreateMenu"><button class= "button">리뷰 등록</button></Link>
                         </div>
                         <div class= "menuPane">
-                            <ReviewPost/>
+                            <div class="outer">
+                                <div class="pane">
+                                    <div id="pane">
+                                        리뷰&#40; {/*total*/" 건&#41;
+                                    </div>
+                                    <div class="editPane">
+                                        <span>여러분의 맛집 후기를 남겨주세요!</span>
+                                        <Link to="/CreateMenu"><button class="button">리뷰 등록</button></Link>
+                                    </div>
+                                    <div class="menuPane">
+                                        <Link to="/CreateMenu">
+                                            <div class="pr_description">
+                                                <div class="user_">사용자</div>
+                                                <div class="store_">음식점 이름</div>
+                                                <div class="review_title">리뷰 제목입니다.</div>
+                                                <div class="review_desc">본문샘플<br />본문샘플</div>
+                                                <div class="review_img"><img src="sample" width="250" height="230" /></div>
+                                            </div>
+                                        </Link>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
